# CodeMap

./: CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  FILES.md  README.md  UI_DEVELOPMENT_PLAN.md  context.md  run_tests.bat  run_tests.sh
.github/workflows/: build-release.yml  build-simple.yml  build-windows.yml
docs/: UI_MOCKUPS.md  WINDOWS_RELEASE.md
frontend/: app.js  index.html  styles.css
include/: codemap_types.h  graph_builder.h  json_exporter.h  parser.h
scripts/: bundle-windows-deps.ps1  validate-windows-bundle.ps1
src/: json_exporter.cpp
tests/: test_codemap_types.cpp  test_json_exporter.cpp
